Collapsing layout trial

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="empty_time_code">00:00</string>
     <!--Menu-->
     <string name="menu_fav">Избранное</string>
+    <!--Transitions-->
+    <string name="person_transition">personTransition</string>
 
 </resources>
